force-app/main/default/objects/Code_File__c/Code_File__c.object-meta.xml
<CustomObject>
    <label>Code File</label>
    <pluralLabel>Code Files</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>