force-app/main/default/objects/Code_File__c/fields/Analyzer__c.field-meta.xml
<CustomField>
    <fullName>Analyzer__c</fullName>
    <label>Analyzer</label>
    <referenceTo>Code_Analyzer__c</referenceTo>
    <relationshipLabel>Code Files</relationshipLabel>
    <relationshipName>CodeFiles</relationshipName>
    <type>Lookup</type>
</CustomField>